--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,73 @@
 ---
+import { name, description, keywords, url } from '../constants';
+
 interface Props {
-	title: string;
+    title?: string;
 }
 
-const { title } = Astro.props;
+const { title: subTitle } = Astro.props;
+
+const title = subTitle ? `${subTitle} - ${name}` : name;
+const nameWithUrl = `${name} - ${url}`;
+
+import socialMediaImage from '../assets/social-media.png';
+
+/**
+ * Open Graph data.
+ *
+ * @see {@link https://ogp.me/}
+ */
+const og = {
+    title: nameWithUrl,
+    locale: 'hu_HU',
+    description,
+    type: 'website',
+    url,
+    image: socialMediaImage.src,
+};
+
+const OG_PREFIX = 'og:';
+
+/**
+ * Twitter/X card data.
+ *
+ * @see {@link https://developer.x.com/en/docs/twitter-for-websites/cards/guides/getting-started}
+ */
+const x = {
+    title: nameWithUrl,
+    url,
+    description,
+    image: socialMediaImage.src,
+    card: 'summary_large_image',
+};
+
+const X_PREFIX = 'twitter:';
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="description" content={description} />
+        <meta name="robots" content="all, index, follow" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="author" content={name} />
+        <meta name="keywords" content={keywords.join(',')} />
+        <meta name="publisher" content={nameWithUrl} />
+        <meta name="copyright" content={nameWithUrl} />
+        <meta name="generator" content={Astro.generator} />
+
+        <title>{title}</title>
+
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+        {Object.entries(og).map(([key, value]) => <meta property={`${OG_PREFIX}:${key}`} content={value} />)}
+        {Object.entries(x).map(([key, value]) => <meta name={`${X_PREFIX}:${key}`} content={value} />)}
+    </head>
+    <body>
+		<!-- TODO: header, footer -->
+        <main>
+            <slot />
+        </main>
+    </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
